Fix progress bar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -783,7 +783,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .skill-name {
-  flex: 0 0 100px;
+  flex: 0 0 150px; /* Increased width to accommodate longer skill names */
   text-align: right;
   padding-right: 10px;
   color: #fff;
